0.1.13

0.1.12

2013-02-16  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed a memory leak in quickmail_get_data when handling body data
	* use LF instead of CRLF in headers (fixes a specific test case)
	* quickmail program now accepts body from stdin if not supplied
	* quickmail program now checks if at least 1 destination is supplied

2013-02-13  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed bugs in custom body/attachment handling
	* changes to support Microsoft Visual C as proposed by Troels K.

2013-02-12  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* changes to support Microsoft Visual C as proposed by Troels K.

2012-11-24  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* added -m command line parameter for MIME type of body

0.1.11

2012-11-23  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed hang on remote SMTP disconnect if libcurl is not used
	* quickmail application now returns nonzero exit code on error
	* quickmail_set_body result is no longer const and caller must free()
	* fixed missing Content-Type if no attachments
	* added multipart/alternative support for multiple bodies
	* added quickmail_add_body_file: add body from file
	* added quickmail_add_body_memory: add body from memory
	* added quickmail_add_body_custom: add body from custom source
	* added quickmail_remove_body: remove body
	* added quickmail_list_bodies: list bodies

0.1.10

2012-11-13  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* don't print to debuglog if it is NULL in smtpsocket.c
	* include arpa/inet.h in smtpsocket.h for non-Windows systems

0.1.9

2012-11-11  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* quickmail application now returns nonzero exit code on error
	* CURL_STATICLIB is defined when building static libquickmail.a

0.1.8

2012-11-10  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* now includes quickmail program to send mail from command line