@@ -1,6 +1,6 @@
 @%:@! /bin/sh
 @%:@ Guess values for system-dependent variables and create Makefiles.
-@%:@ Generated by GNU Autoconf 2.68 for libquickmail 0.1.12.
+@%:@ Generated by GNU Autoconf 2.68 for libquickmail 0.1.13.
 @%:@ 
 @%:@ 
 @%:@ Copyright (C) 1992, 1993, 1994, 1995, 1996, 1998, 1999, 2000, 2001,
@@ -567,8 +567,8 @@ MAKEFLAGS=
 # Identity of this package.
 PACKAGE_NAME='libquickmail'
 PACKAGE_TARNAME='libquickmail'
-PACKAGE_VERSION='0.1.12'
-PACKAGE_STRING='libquickmail 0.1.12'
+PACKAGE_VERSION='0.1.13'
+PACKAGE_STRING='libquickmail 0.1.13'
 PACKAGE_BUGREPORT=''
 PACKAGE_URL=''
 
@@ -1285,7 +1285,7 @@ if test "$ac_init_help" = "long"; then
   # Omit some internal or obsolete options to make the list less imposing.
   # This message is too long to be a string in the A/UX 3.1 sh.
   cat <<_ACEOF
-\`configure' configures libquickmail 0.1.12 to adapt to many kinds of systems.
+\`configure' configures libquickmail 0.1.13 to adapt to many kinds of systems.
 
 Usage: $0 [OPTION]... [VAR=VALUE]...
 
@@ -1355,7 +1355,7 @@ fi
 
 if test -n "$ac_init_help"; then
   case $ac_init_help in
-     short | recursive ) echo "Configuration of libquickmail 0.1.12:";;
+     short | recursive ) echo "Configuration of libquickmail 0.1.13:";;
    esac
   cat <<\_ACEOF
 
@@ -1456,7 +1456,7 @@ fi
 test -n "$ac_init_help" && exit $ac_status
 if $ac_init_version; then
   cat <<\_ACEOF
-libquickmail configure 0.1.12
+libquickmail configure 0.1.13
 generated by GNU Autoconf 2.68
 
 Copyright (C) 2010 Free Software Foundation, Inc.
@@ -1875,7 +1875,7 @@ cat >config.log <<_ACEOF
 This file contains any messages produced by compilers while
 running configure, to aid debugging if configure makes a mistake.
 
-It was created by libquickmail $as_me 0.1.12, which was
+It was created by libquickmail $as_me 0.1.13, which was
 generated by GNU Autoconf 2.68.  Invocation command line was
 
   $ $0 $@
@@ -2690,7 +2690,7 @@ fi
 
 # Define the identity of the package.
  PACKAGE=libquickmail
- VERSION=0.1.12
+ VERSION=0.1.13
 
 
 cat >>confdefs.h <<_ACEOF
@@ -12967,7 +12967,7 @@ cat >>$CONFIG_STATUS <<\_ACEOF || ac_write_fail=1
 # report actual input values of CONFIG_FILES etc. instead of their
 # values after options handling.
 ac_log="
-This file was extended by libquickmail $as_me 0.1.12, which was
+This file was extended by libquickmail $as_me 0.1.13, which was
 generated by GNU Autoconf 2.68.  Invocation command line was
 
   CONFIG_FILES    = $CONFIG_FILES
@@ -13033,7 +13033,7 @@ _ACEOF
 cat >>$CONFIG_STATUS <<_ACEOF || ac_write_fail=1
 ac_cs_config="`$as_echo "$ac_configure_args" | sed 's/^ //; s/[\\""\`\$]/\\\\&/g'`"
 ac_cs_version="\\
-libquickmail config.status 0.1.12
+libquickmail config.status 0.1.13
 configured by $0, generated by GNU Autoconf 2.68,
   with options \\"\$ac_cs_config\\"
 
